<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="402dp"
        android:layout_height="70dp"
        android:layout_marginTop="204dp"
        android:background="@drawable/custom_edittext"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="#bf5f82"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="406dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/password_hint"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="#bf5f82"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_username" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="59dp"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:onClick="login"
        android:background="@drawable/custom_button"
        android:capitalize="characters"
        android:text="@string/btn_text"

        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <TextView
        android:id="@+id/text_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:clickable="true"
        android:linksClickable="true"
        android:onClick="registerMe"
        android:text="@string/link"
        android:textAlignment="center"
        android:textColorLink="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>